--- a/template/template.html
+++ b/template/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="application-name" content="Test application" />
+    <meta name="application-name" content="微信小程序文档索引" />
     <meta name="theme-color" content="#000000" />
     <title>微信小程序文档索引</title>
 
