chore: read script file and inject to html

--- a/template/template.html
+++ b/template/template.html
@@ -49,9 +49,7 @@
     </div>
 
     <script type="text/javascript">
-      console.log('小程序就是一坨屎💩');
-      console.log('           <small>以上仅个人观点</small>');
-      console.log('           <small>不代表任何其他人或第三方立场</small>');
+      {{script}}
     </script>
   </body>
 </html>
