chore: more human friendly time

--- a/template/template.html
+++ b/template/template.html
@@ -28,7 +28,7 @@
           <img src="https://travis-ci.org/haishanh/mp-doc-one-page.svg?branch=master" alt="Build Status">
         </a>
       </div>
-      <div>
+      <div class="hidden">
         生成时间 {{datetime}}
       </div>
     </div>
