--- a/template/style.css
+++ b/template/style.css
@@ -1,3 +1,6 @@
+html {
+  background: rgb(245, 245, 245);
+}
 body {
   margin: 0;
   padding: 0 16px;
@@ -32,7 +35,7 @@ ul > li > a {
   height: 35px;
 
   position: sticky;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(245, 245, 245, 0.85);
   top: 0px;
 }
 
@@ -51,10 +54,11 @@ ul > li > ul > li > a {
 }
 
 .blocks .section-title {
-  flex-basis: 20%;
+  flex-basis: 10%;
+  min-width: 140px;
 }
 .blocks .summary {
-  flex-basis: 80%;
+  flex-basis: 90%;
   margin: 0;
 }
 
@@ -65,7 +69,7 @@ ul > li > ul > li > a {
   position: sticky;
   top: 0;
 
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(245, 245, 245, 0.85);
   margin: 0;
   padding: 0;
 }
